Ex1 Fix: align

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,7 +1,7 @@
 div {
     background-color: red;
     color: white;
-    align: center;
+    text-align: center;
     font-size: 32px;
     font-weight: bold;
 }
